--- a/WhatsQR2.html
+++ b/WhatsQR2.html
@@ -3,7 +3,7 @@
 <head>
 <title>QRCode generator for WhatsApp links</title>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+<script type="text/javascript" src="WhtzAppQRgen/qrcode.js"></script>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 body {
