--- a/WhatsQR2.html
+++ b/WhatsQR2.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>QRCode generator for WhatsApp links</title>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="WhtzAppQRgen/qrcode.js"></script>
+<script type="text/javascript" src="WhtzAppQRgen/jquery.min.js"></script>
+<script type="text/javascript" src="WhtzAppQRgen/qrcode.min.js"></script>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 body {
