--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <title>QRCode generator for WhatsApp links</title>
-<script type="text/javascript" src="WhtzAppQRgen/jquery.min.js"></script>
-<script type="text/javascript" src="WhtzAppQRgen/qrcode.min.js"></script>
+<script type="text/javascript" src="jquery.min.js"></script>
+<script type="text/javascript" src="qrcode.js"></script>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 body {
