--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 body {
     font-family: 'Open Sans', sans-serif;
+    font-size: large;
     }
 .flex-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  width: 80%;
 }
 /* Hide HTML5 Up and Down arrows. */
 input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
