--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ For WhatsApp you will need to include the country code (62).
 <input id="wAnumber" type="number" value="62" style="width:80%"/><br />
 <input id="wAmessage" type="text" value="Please come see your child in the IES Kids area" style="width:80%"/>
 <br />
-<div id="qrcode" href="wurl" style="width:100px; height:100px; margin-top:15px;"></div>
+<a href="wurl"><div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div></a>
 </div>
 
 
