--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ For WhatsApp you will need to include the country code (62).
 <input id="wAnumber" type="number" value="62" style="width:80%"/><br />
 <input id="wAmessage" type="text" value="Please come see your child in the IES Kids area" style="width:80%"/>
 <br />
-<a href="wurl"><div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div></a>
+<div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div>
 </div>
 
 
@@ -47,12 +47,12 @@ var qrcode = new QRCode(document.getElementById("qrcode"), {
 	width : 100,
 	height : 100
 });
-var wnumber = document.getElementById("wAnumber");
-var wmessage = document.getElementById("wAmessage"); 
-var wurl = "https://wa.me/" + (wAnumber.value) + "?text=" + encodeURI(wAmessage.value);
+
 
 function makeCode () { 
-    
+    var wnumber = document.getElementById("wAnumber");
+    var wmessage = document.getElementById("wAmessage"); 
+    var wurl = "https://wa.me/" + (wAnumber.value) + "?text=" + encodeURI(wAmessage.value);
     if (!wnumber.value) {
         alert("Input a number");
         wnumber.focus();
