--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@ body {
 /* Hide HTML5 Up and Down arrows. */
 input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
+    font-size: large;
     margin: 0;
 }
  
 input[type="number"] {
     -moz-appearance: textfield;
+    font-size: large;
 }
 </style>
 </head>
