--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ input[type="number"] {
 <div class="flex-container">
 For WhatsApp you will need to include the country code (62).
 <hr>
-<input id="wAnumber" type="number" value="62" style="font-size:large; width:80%"/><br />
-<input id="wAmessage" type="text" value="Please come see your child in the IES Kids area" style="font-size:large; width:80%"/>
+<input id="wAnumber" type="number" value="62" style="font-size:25px; width:80%"/><br />
+<input id="wAmessage" type="text" value="Please come see your child in the IES Kids area" style="font-size:25px; width:80%"/>
 <br />
 <div id="qrcode" style="width:200px; height:200px; margin-top:5px;"></div>
 </div>
