--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@ body {
 /* Hide HTML5 Up and Down arrows. */
 input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
-    font-size: large;
+    font-size: 40px;
+    width:80%;
     margin: 0;
 }
  
 input[type="number"] {
     -moz-appearance: textfield;
-    font-size: large;
+    font-size: 40px;
+    width:80%;
 }
 </style>
 </head>
@@ -37,10 +39,10 @@ input[type="number"] {
 <div class="flex-container">
 For WhatsApp you will need to include the country code (62).
 <hr>
-<input id="wAnumber" type="number" value="62" style="font-size:25px; width:80%"/><br />
-<input id="wAmessage" type="text" value="Please come see your child in the IES Kids area" style="font-size:25px; width:80%"/>
+<input id="wAnumber" type="number" value="62"/><br />
+<input id="wAmessage" type="text" value="Please come see your child in the IES Kids area"/>
 <br />
-<div id="qrcode" style="width:200px; height:200px; margin-top:5px;"></div>
+<div id="qrcode" style="width:50%; height:auto; margin-top:5px;"></div>
 </div>
 
 
