--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
     }
 .flex-container {
   display: flex;
-  justify-content: center;
+  flex: 1;
   flex-direction: column;
   align-items: center;
   font-size: large;
