--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
 .flex-container {
   display: flex;
   flex: 1;
+  align-self: center;
   flex-direction: column;
   align-items: center;
   font-size: large;
