--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 body {
     font-family: 'Open Sans', sans-serif;
-    font-size: large;
+    font-size: 40px;
     }
 .flex-container {
   display: flex;
