--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@ For WhatsApp you will need to include the country code (62).
 <input id="wAnumber" type="number" value="62"/><br />
 <input id="wAmessage" type="text" value="Please come see your child in the IES Kids area"/>
 <br />
+<a id="href">
 <div id="qrcode" style="width:50%; height:auto; margin-top:5px;"></div>
-</div>
+	</a>
+	</div>
 
 
 
@@ -54,6 +56,7 @@ var qrcode = new QRCode(document.getElementById("qrcode"), {
 	height : 200
 });
 
+var href = document.getElementById("href").setAttribute("href",("https://wa.me/" + document.getElementById("wAnumber") + "?text=" + encodeURI("wAmessage")));
 
 function makeCode () { 
     var wnumber = document.getElementById("wAnumber");
