--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@ var qrcode = new QRCode(document.getElementById("qrcode"), {
 	height : 200
 });
 
-var href = document.getElementById("href").setAttribute("href",("https://wa.me/" + (document.getElementById("wAnumber")).value + "?text=" + encodeURI("wAmessage").value));
+var href = document.getElementById("href").setAttribute("href",wurl.value);
 
 function makeCode () { 
     var wnumber = document.getElementById("wAnumber");
     var wmessage = document.getElementById("wAmessage"); 
     var wurl = "https://wa.me/" + (wAnumber.value) + "?text=" + encodeURI(wAmessage.value);
+    var href = document.getElementById("href").setAttribute("href",wurl.value);
     if (!wnumber.value) {
         alert("Input a number");
         wnumber.focus();
