--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Validation will be done through your WhatsApp account.</p>
 var qrcode = new QRCode(document.getElementById("qrcode"), {
 	width : 200,
 	height : 200,
-    useSVG : true 
+/*    useSVG : true */
 });
 
 
