--- a/WhatsQR2.html
+++ b/WhatsQR2.html
@@ -2,18 +2,32 @@
 <html>
 <head>
 <title>QRCode generator for WhatsApp links</title>
-<script type="text/javascript" src="WhtzAppQRgen/jquery.min.js"></script>
-<script type="text/javascript" src="WhtzAppQRgen/qrcode.min.js"></script>
+<script type="text/javascript" src="jquery.min.js"></script>
+<script type="text/javascript" src="qrcode.js"></script>
 <style>
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
 body {
     font-family: 'Open Sans', sans-serif;
+    font-size: 40px;
     }
 .flex-container {
   display: flex;
-  justify-content: center;
+  flex: 1;
+  align-self: center;
   flex-direction: column;
   align-items: center;
+  font-size: large;
+  width: 80%;
+}
+textarea {
+    font-size: 20px;
+    width:80%;
+    align-items:center;
+}
+input {
+    font-size: 32px;
+    width:80%;
+    align-items:center;
 }
 /* Hide HTML5 Up and Down arrows. */
 input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
@@ -30,28 +44,36 @@ input[type="number"] {
 
 
 <div class="flex-container">
-For WhatsApp you will need to include the country code (62).
+<p style="text-align:center;">For WhatsApp you will need to include the country code (62).<br />
+There is no validation for phone numbers in this page.<br />
+Validation will be done through your WhatsApp account.</p>
 <hr>
-<input id="wAnumber" type="number" value="62" style="width:80%"/><br />
-<input id="wAmessage" type="text" value="Please come see your child in the IES Kids area" style="width:80%"/>
+<input id="wAnumber" type="number" value="62"/><br />
+
+<textarea id="wAmessage" rows="10">
+Please come see your child in the IES Kids area.
+</textarea>
 <br />
-<div id="qrcode" style="width:100px; height:100px; margin-top:15px;"></div>
-</div>
+<a id="href">
+<div id="qrcode" style="margin-top:5px; align-items:center"></div>
+	</a>
+	</div>
 
 
 
 <script type="text/javascript">
 var qrcode = new QRCode(document.getElementById("qrcode"), {
-	width : 100,
-	height : 100
+	width : 200,
+	height : 200,
+    useSVG : true 
 });
 
+
 function makeCode () { 
-	var wnumber = document.getElementById("wAnumber");
-	var wmessage = document.getElementById("wAmessage"); 
-	var enMessage = ("this should work for us if it doesn't I don't ") ;
-	var wurl = "https://wa.me/" + (wAnumber.value) + "?text=" + encodeURI(wAmessage.value);
-    
+    var wnumber = document.getElementById("wAnumber");
+    var wmessage = document.getElementById("wAmessage"); 
+    var wurl = "https://wa.me/" + (wnumber.value) + "?text=" + encodeURI(wmessage.value);
+    var href = document.getElementById("href").setAttribute("href",wurl);
     if (!wnumber.value) {
         alert("Input a number");
         wnumber.focus();
