--- a/URLOnly.html
+++ b/URLOnly.html
@@ -44,7 +44,7 @@ input[type="number"] {
 
 
 <div class="flex-container">
-<p style="text-align:center;">Past the url.</p>
+<p style="text-align:center;">Paste the url in the box and hit enter.</p>
 <hr>
 
 <textarea id="urlText" rows="10">
