--- a/URLOnly.html
+++ b/URLOnly.html
@@ -48,7 +48,7 @@ input[type="number"] {
 <hr>
 
 <textarea id="urlText" rows="10">
-Please come see your child in the IES Kids area.
+Replace this text with your text.
 </textarea>
 <br />
 <a id="href">
