--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>QRCode generator for WhatsApp links</title>
+<title>QRCode link generator for WhatsApp "click to chat" message.</title>
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="qrcode.js"></script>
 <style>
@@ -51,7 +51,7 @@ Validation will be done through your WhatsApp account.</p>
 <input id="wAnumber" type="number" value="62"/><br />
 
 <textarea id="wAmessage" rows="10">
-Please come see your child in the IES Kids area.
+Input your WhatsApp message here.
 </textarea>
 <br />
 <a id="href">
@@ -63,8 +63,8 @@ Please come see your child in the IES Kids area.
 
 <script type="text/javascript">
 var qrcode = new QRCode(document.getElementById("qrcode"), {
-	width : 200,
-	height : 200,
+	width : 100,
+	height : 100,
     useSVG : true 
 });
 
