--- a/index.html
+++ b/index.html
@@ -1,108 +1,119 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>QRCode link generator for WhatsApp "click to chat" message.</title>
-<script type="text/javascript" src="jquery.min.js"></script>
-<script type="text/javascript" src="qrcode.js"></script>
-<style>
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
-body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 40px;
-    }
-.flex-container {
-  display: flex;
-  flex: 1;
-  align-self: center;
-  flex-direction: column;
-  align-items: center;
-  font-size: large;
-  width: 80%;
-}
-textarea {
-    font-size: 20px;
-    width:80%;
-    align-items:center;
-}
-input {
-    font-size: 32px;
-    width:80%;
-    align-items:center;
-}
-/* Hide HTML5 Up and Down arrows. */
-input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
- 
-input[type="number"] {
-    -moz-appearance: textfield;
-}
-</style>
+    <title>QRCode link generator for WhatsApp "click to chat" message.</title>
+    <script type="text/javascript" src="jquery.min.js"></script>
+    <script type="text/javascript" src="qrcode.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
+        body {
+            font-family: 'Open Sans', sans-serif;
+            font-size: 40px;
+        }
+
+        .flex-container {
+            display: flex;
+            flex: 1;
+            align-self: center;
+            flex-direction: column;
+            align-items: center;
+            font-size: large;
+            width: 80%;
+        }
+
+        textarea {
+            font-size: 20px;
+            width: 80%;
+            align-items: center;
+        }
+
+        input {
+            font-size: 32px;
+            width: 80%;
+            align-items: center;
+        }
+
+        /* Hide HTML5 Up and Down arrows. */
+        input[type="number"]::-webkit-outer-spin-button,
+        input[type="number"]::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        input[type="number"] {
+            -moz-appearance: textfield;
+        }
+    </style>
 </head>
+
 <body>
 
 
-<div class="flex-container">
-<p style="text-align:center;">For WhatsApp you will need to include the country code (62).<br />
-There is no validation for phone numbers in this page.<br />
-Validation will be done through your WhatsApp account.</p>
-<hr>
-<input id="wAnumber" type="number" value="62"/><br />
+    <div class="flex-container">
+        <p style="text-align:center;">For WhatsApp you will need to include the country code (62).<br />
+            There is no validation for phone numbers in this page.<br />
+            Validation will be done through your WhatsApp account.</p>
+        <hr>
+        <input id="wAnumber" type="number" value="62" /><br />
 
-<textarea id="wAmessage" rows="10">
+        <textarea id="wAmessage" rows="10">
 Input your WhatsApp message here.
 </textarea>
-<br />
-<a id="href">
-<div id="qrcode" style="margin-top:5px; align-items:center"></div>
-	</a>
-	</div>
+        <br />
+        <a id="href">
+            <div id="qrcode" style="margin-top:5px; align-items:center"></div>
+        </a>
 
 
 
-<script type="text/javascript">
-var qrcode = new QRCode(document.getElementById("qrcode"), {
-	width : 100,
-	height : 100,
-    useSVG : true 
-});
+
+        <script type="text/javascript">
+            var qrcode = new QRCode(document.getElementById("qrcode"), {
+                width: 100,
+                height: 100,
+                useSVG: true
+            });
 
 
-function makeCode () { 
-    var wnumber = document.getElementById("wAnumber");
-    var wmessage = document.getElementById("wAmessage"); 
-    var wurl = "https://wa.me/" + (wnumber.value) + "?text=" + encodeURI(wmessage.value);
-    var href = document.getElementById("href").setAttribute("href",wurl);
-    if (!wnumber.value) {
-        alert("Input a number");
-        wnumber.focus();
-        return;
-    }
-    qrcode.makeCode(wurl);
-}
-makeCode();
+            function makeCode() {
+                var wnumber = document.getElementById("wAnumber");
+                var wmessage = document.getElementById("wAmessage");
+                var wurl = "https://wa.me/" + (wnumber.value) + "?text=" + encodeURI(wmessage.value);
+                var href = document.getElementById("href").setAttribute("href", wurl);
+                if (!wnumber.value) {
+                    alert("Input a number");
+                    wnumber.focus();
+                    return;
+                }
+                qrcode.makeCode(wurl);
+            }
+            makeCode();
 
-$("#wAnumber").
-	on("blur", function () {
-		makeCode();
-	}).
-	on("keydown", function (e) {
-		if (e.keyCode == 13) {
-			makeCode();
-		}
-	});
-	
-$("#wAmessage").
-	on("blur", function () {
-		makeCode();
-	}).
-	on("keydown", function (e) {
-		if (e.keyCode == 13) {
-			makeCode();
-		}
-	});
+            $("#wAnumber").
+                on("blur", function () {
+                    makeCode();
+                }).
+                on("keydown", function (e) {
+                    if (e.keyCode == 13) {
+                        makeCode();
+                    }
+                });
 
-</script>
+            $("#wAmessage").
+                on("blur", function () {
+                    makeCode();
+                }).
+                on("keydown", function (e) {
+                    if (e.keyCode == 13) {
+                        makeCode();
+                    }
+                });
+
+        </script>
+    </div>
 </body>
+
+
 </html>
