--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
             flex-direction: column;
             align-items: center;
             font-size: large;
-            width: 50%;
+            width: 80%;
+        }
+
+        .flex-content {
+            display: flex;
+            flex: 1;
+            align-self: center;
+            flex-direction: column;
+            align-items: center;
+            font-size: large;
+            width: 33%;
         }
 
         textarea {
@@ -68,50 +78,51 @@ Input your WhatsApp message here.
 
 
 
+        <div class="flex-content">
+            <script type="text/javascript">
+                var qrcode = new QRCode(document.getElementById("qrcode"), {
+                    width: 100,
+                    height: 100,
+                    useSVG: true
+                });
 
-        <script type="text/javascript">
-            var qrcode = new QRCode(document.getElementById("qrcode"), {
-                width: 100,
-                height: 100,
-                useSVG: true
-            });
 
-
-            function makeCode() {
-                var wnumber = document.getElementById("wAnumber");
-                var wmessage = document.getElementById("wAmessage");
-                var wurl = "https://wa.me/" + (wnumber.value) + "?text=" + encodeURI(wmessage.value);
-                var href = document.getElementById("href").setAttribute("href", wurl);
-                if (!wnumber.value) {
-                    alert("Input a number");
-                    wnumber.focus();
-                    return;
+                function makeCode() {
+                    var wnumber = document.getElementById("wAnumber");
+                    var wmessage = document.getElementById("wAmessage");
+                    var wurl = "https://wa.me/" + (wnumber.value) + "?text=" + encodeURI(wmessage.value);
+                    var href = document.getElementById("href").setAttribute("href", wurl);
+                    if (!wnumber.value) {
+                        alert("Input a number");
+                        wnumber.focus();
+                        return;
+                    }
+                    qrcode.makeCode(wurl);
                 }
-                qrcode.makeCode(wurl);
-            }
-            makeCode();
+                makeCode();
 
-            $("#wAnumber").
-                on("blur", function () {
-                    makeCode();
-                }).
-                on("keydown", function (e) {
-                    if (e.keyCode == 13) {
+                $("#wAnumber").
+                    on("blur", function () {
                         makeCode();
-                    }
-                });
+                    }).
+                    on("keydown", function (e) {
+                        if (e.keyCode == 13) {
+                            makeCode();
+                        }
+                    });
 
-            $("#wAmessage").
-                on("blur", function () {
-                    makeCode();
-                }).
-                on("keydown", function (e) {
-                    if (e.keyCode == 13) {
+                $("#wAmessage").
+                    on("blur", function () {
                         makeCode();
-                    }
-                });
+                    }).
+                    on("keydown", function (e) {
+                        if (e.keyCode == 13) {
+                            makeCode();
+                        }
+                    });
 
-        </script>
+            </script>
+        </div>
     </div>
 </body>
 
