--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             flex-direction: column;
             align-items: center;
             font-size: large;
-            width: 33%;
+            width: 33vh;
         }
 
         textarea {
