--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ Input your WhatsApp message here.
 
 
         <div class="flex-content">
-            <script type="text/javascript">
+            <script type="text/javascript" style="width:50%; height:50%;" viewBox="none">
                 var qrcode = new QRCode(document.getElementById("qrcode"), {
                     width: 100,
                     height: 100,
