--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@ Input your WhatsApp message here.
 
 
         <div class="flex-content">
-            <script type="text/javascript" style="width:50%; height:50%;" viewBox="none">
+            <script type="text/javascript">
                 var qrcode = new QRCode(document.getElementById("qrcode"), {
                     width: 100,
                     height: 100,
-                    useSVG: true
+//                    useSVG: true
                 });
 
 
