--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         .grid_item {
-            grid-column-start: col-start 2;
+            grid-column: 2;
         }
 
         .flex-container {
