--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         }
 
         .grid_item {
-            grid-column: 2;
+            grid-column: 2 / span 1;
         }
 
         .flex-container {
