--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         .grid_item {
             grid-column-start: 2;
+            grid-column-end: 2;
             justify-self: center;
         }
 
