--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
         .grid_container {
             grid-template-columns: 1fr 5fr 1fr;
+            grid-template-rows: 100%;
         }
 
         .grid_item {
