--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
         .grid_container {
             grid-template-columns: 1fr 5fr 1fr;
-            grid-template-rows: 100%;
+            grid-template-rows: auto;
         }
 
         .grid_item {
             grid-column-start: 2;
             grid-column-end: 2;
-            justify-self: center;
+            justify-self: stretch;
         }
 
         .flex-container {
@@ -70,8 +70,6 @@
 </head>
 
 <body>
-
-
     <div class="grid_container">
         <div class="grid_item">
             <p style="text-align:center;">For WhatsApp you will need to include the country code (62).<br />
