--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         }
 
         .grid_container {
+            display: grid;
             grid-template-columns: 1fr 5fr 1fr;
             grid-template-rows: auto;
         }
