--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 
 
-            <div class="grid_item">
+            <div class="flex-content">
                 <script type="text/javascript">
                     var qrcode = new QRCode(document.getElementById("qrcode"), {
                         width: 200,
