--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 
 <body>
-    <div class="grid_container">
+    <div class="grid_container flex-content">
         <div class="grid_item">
             <p style="text-align:center;">For WhatsApp you will need to include the country code (62).<br />
                 There is no validation for phone numbers in this page.<br />
