--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         .grid_item {
             grid-column-start: 2;
             grid-column-end: 2;
+            align-items: center;
             justify-self: stretch;
         }
 
@@ -71,7 +72,7 @@
 </head>
 
 <body>
-    <div class="grid_container flex-content">
+    <div class="grid_container">
         <div class="grid_item">
             <p style="text-align:center;">For WhatsApp you will need to include the country code (62).<br />
                 There is no validation for phone numbers in this page.<br />
