--- a/index.html
+++ b/index.html
@@ -91,49 +91,51 @@
 
 
             <div class="flex-container">
-                <script type="text/javascript">
-                    var qrcode = new QRCode(document.getElementById("qrcode"), {
-                        width: 200,
-                        height: 200,
-                        //                    useSVG: true
-                    });
+                <div class="flex-content">
+                    <script type="text/javascript">
+                        var qrcode = new QRCode(document.getElementById("qrcode"), {
+                            width: 200,
+                            height: 200,
+                            //                    useSVG: true
+                        });
 
 
-                    function makeCode() {
-                        var wnumber = document.getElementById("wAnumber");
-                        var wmessage = document.getElementById("wAmessage");
-                        var wurl = "https://wa.me/" + (wnumber.value) + "?text=" + encodeURI(wmessage.value);
-                        var href = document.getElementById("href").setAttribute("href", wurl);
-                        if (!wnumber.value) {
-                            alert("Input a number");
-                            wnumber.focus();
-                            return;
+                        function makeCode() {
+                            var wnumber = document.getElementById("wAnumber");
+                            var wmessage = document.getElementById("wAmessage");
+                            var wurl = "https://wa.me/" + (wnumber.value) + "?text=" + encodeURI(wmessage.value);
+                            var href = document.getElementById("href").setAttribute("href", wurl);
+                            if (!wnumber.value) {
+                                alert("Input a number");
+                                wnumber.focus();
+                                return;
+                            }
+                            qrcode.makeCode(wurl);
                         }
-                        qrcode.makeCode(wurl);
-                    }
-                    makeCode();
+                        makeCode();
 
-                    $("#wAnumber").
-                        on("blur", function () {
-                            makeCode();
-                        }).
-                        on("keydown", function (e) {
-                            if (e.keyCode == 13) {
+                        $("#wAnumber").
+                            on("blur", function () {
                                 makeCode();
-                            }
-                        });
+                            }).
+                            on("keydown", function (e) {
+                                if (e.keyCode == 13) {
+                                    makeCode();
+                                }
+                            });
 
-                    $("#wAmessage").
-                        on("blur", function () {
-                            makeCode();
-                        }).
-                        on("keydown", function (e) {
-                            if (e.keyCode == 13) {
+                        $("#wAmessage").
+                            on("blur", function () {
                                 makeCode();
-                            }
-                        });
+                            }).
+                            on("keydown", function (e) {
+                                if (e.keyCode == 13) {
+                                    makeCode();
+                                }
+                            });
 
-                </script>
+                    </script>
+                </div>
             </div>
         </div>
     </div>
