--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
             display: grid;
             grid-template-columns: 1fr 5fr 1fr;
             grid-template-rows: auto;
+            align-items: center;
+            justify-self: center;
         }
 
         .grid_item {
             grid-column-start: 2;
             grid-column-end: 2;
             align-items: center;
-            justify-self: stretch;
+            justify-self: center;
         }
 
         .flex-container {
