--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             grid-column-start: 2;
             grid-column-end: 2;
             align-items: center;
-            justify-self: center;
+            justify-items: center;
         }
 
         .flex-container {
