--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         textarea {
             font-size: 20px;
             width: 80%;
-            align-items: center;
+            text-align: center;
         }
 
         input {
             font-size: 32px;
             width: 80%;
-            align-items: center;
+            text-align: center;
         }
 
         /* Hide HTML5 Up and Down arrows. */
