--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
         <div class="grid_item">
             <input id="wAnumber" type="number" value="62" /><br />
 
-            <textarea id="wAmessage" rows="10">
-            Input your WhatsApp message here.
-            </textarea>
+            <textarea id="wAmessage" rows="10">Input your WhatsApp message here.</textarea>
             <br />
             <a id="href">
                 <div id="qrcode" style="margin-top:5px; align-items:center"></div>
