--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             grid-column-end: 2;
             align-items: center;
             justify-self: center;
+            text-align: center;
         }
 
         .flex-container {
