--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 
             <textarea id="wAmessage" rows="10">Input your WhatsApp message here.</textarea>
             <br />
-            <div class="grid_item">
+            <div >
                 <a id="href">
-                    <div id="qrcode" style="margin-top:5px; align-items:center"></div>
+                    <div id="qrcode" class="grid_item" style="margin-top:5px; align-items:center"></div>
                 </a>
                 <script type="text/javascript">
                     var qrcode = new QRCode(document.getElementById("qrcode"), {
