--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
             <textarea id="wAmessage" rows="10">Input your WhatsApp message here.</textarea>
             <br />
-            <div >
+            <div>
                 <a id="href">
                     <div id="qrcode" class="grid_item" style="margin-top:5px; align-items:center"></div>
                 </a>
@@ -95,7 +95,7 @@
                     var qrcode = new QRCode(document.getElementById("qrcode"), {
                         width: 200,
                         height: 200,
-                        //                    useSVG: true
+                        useSVG: true,
                     });
 
 
