--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     var qrcode = new QRCode(document.getElementById("qrcode"), {
                         width: 100,
                         height: 100,
-                        useSVG: true,
+                       // useSVG: true,
                     });
 
 
