--- a/index.html
+++ b/index.html
@@ -87,54 +87,55 @@
 
             <textarea id="wAmessage" rows="10">Input your WhatsApp message here.</textarea>
             <br />
-            <div>
-                <a id="href">
-                    <div id="qrcode" class="grid_item" style="margin-top:5px; align-items:center"></div>
-                </a>
-                <script type="text/javascript">
-                    var qrcode = new QRCode(document.getElementById("qrcode"), {
-                        width: 100,
-                        height: 100,
-                       // useSVG: true,
+        </div>
+        <div class="grid_item">
+            <a id="href">
+                <div id="qrcode" class="grid_item" style="margin-top:5px; align-items:center"></div>
+            </a>
+            <script type="text/javascript">
+                var qrcode = new QRCode(document.getElementById("qrcode"), {
+                    width: 100,
+                    height: 100,
+                    // useSVG: true,
+                });
+
+
+                function makeCode() {
+                    var wnumber = document.getElementById("wAnumber");
+                    var wmessage = document.getElementById("wAmessage");
+                    var wurl = "https://wa.me/" + (wnumber.value) + "?text=" + encodeURI(wmessage.value);
+                    var href = document.getElementById("href").setAttribute("href", wurl);
+                    if (!wnumber.value) {
+                        alert("Input a number");
+                        wnumber.focus();
+                        return;
+                    }
+                    qrcode.makeCode(wurl);
+                }
+                makeCode();
+
+                $("#wAnumber").
+                    on("blur", function () {
+                        makeCode();
+                    }).
+                    on("keydown", function (e) {
+                        if (e.keyCode == 13) {
+                            makeCode();
+                        }
                     });
 
-
-                    function makeCode() {
-                        var wnumber = document.getElementById("wAnumber");
-                        var wmessage = document.getElementById("wAmessage");
-                        var wurl = "https://wa.me/" + (wnumber.value) + "?text=" + encodeURI(wmessage.value);
-                        var href = document.getElementById("href").setAttribute("href", wurl);
-                        if (!wnumber.value) {
-                            alert("Input a number");
-                            wnumber.focus();
-                            return;
+                $("#wAmessage").
+                    on("blur", function () {
+                        makeCode();
+                    }).
+                    on("keydown", function (e) {
+                        if (e.keyCode == 13) {
+                            makeCode();
                         }
-                        qrcode.makeCode(wurl);
-                    }
-                    makeCode();
-
-                    $("#wAnumber").
-                        on("blur", function () {
-                            makeCode();
-                        }).
-                        on("keydown", function (e) {
-                            if (e.keyCode == 13) {
-                                makeCode();
-                            }
-                        });
-
-                    $("#wAmessage").
-                        on("blur", function () {
-                            makeCode();
-                        }).
-                        on("keydown", function (e) {
-                            if (e.keyCode == 13) {
-                                makeCode();
-                            }
-                        });
-                </script>
-            </div>
+                    });
+            </script>
         </div>
+    </div>
     </div>
     </div>
 </body>
