Added Submit button maybe

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
             <textarea id="wAmessage" rows="10">Input your WhatsApp message here.</textarea>
             <br />
+            <input id="submit" type="submit" value="Submit" />
         </div>
         <div class="grid_item">
             <a id="href">
