--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 var qrcode = new QRCode(document.getElementById("qrcode"), {
                     width: 100,
                     height: 100,
-                    // useSVG: true,
+                    useSVG: true,
                 });
 
 
