--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         .grid_container {
             display: grid;
-            grid-template-columns: 1fr 10fr 1fr;
+            grid-template-columns: repeat(12, 1fr);
             grid-template-rows: auto;
             align-items: center;
             justify-items: center;
