--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         body {
             font-family: 'Open Sans', sans-serif;
-            font-size: calc(1fr/(1/1vw));
+            font-size: calc(1fr/(1/1vw*1fr));
         }
 
         .grid_container {
