--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         body {
             font-family: 'Open Sans', sans-serif;
-            font-size: calc(1fr/.3vh);
+            font-size: calc(60px * 1/1vw);
         }
 
         .grid_container {
