--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         body {
             font-family: 'Open Sans', sans-serif;
-            font-size: calc(80px - 3vh);
+            font-size: 1em;
         }
 
         .grid_container {
